bookinfo/productpage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: productpage-ingress
  namespace: bookinfo
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  ingressClassName: contour
  rules:
    - host: productpage.4-213-153-88.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: productpage
                port:
                  number: 9080
